# AutoLanding

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/basic/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
devel/.private/communication/: .catkin  .rosinstall
devel/.private/fw_att_control/: .catkin  local_setup.sh
devel/.private/fw_msgs/: .catkin  local_setup.sh
devel/.private/fw_pos_control/: .catkin  .rosinstall
devel/.private/libmavconn/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mavros/: .catkin
devel/.private/mavros_extras/: .catkin  .rosinstall  local_setup.sh
devel/.private/mavros_msgs/: .catkin
devel/.private/msgsSub/: .catkin  local_setup.sh
devel/.private/navigator/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/processer/: .catkin  _setup_util.py  setup.sh
devel/.private/test/: .catkin  .rosinstall  setup.sh
devel/.private/test_mavros/: .catkin  .rosinstall  setup.sh
devel/include/communication/: ACK.h  FormationData.h  FormationNavigator.h  FormationPositionContoller.h  QgcCommands.h  UDPData.h  UpdHP.h  Yaw.h  udpDataTypes.h
devel/include/fw_att_control/: commands.h  formations.h  processer.h
devel/include/fw_msgs/: ACK.h  ACKflag.h  DataLinkDown.h  EXITflag.h  FormationData.h  FormationNavigator.h  FormationPositionContoller.h  ModeSetting.h  NormalSwitchMode.h  ProtectFlag.h  QgcCommands.h  UDPData.h  UpdHP.h  Yaw.h  commands.h  flyMode.h  formations.h  position_setpoint_triplet.h  processer.h  target.h  uav_ids.h  uavflag.h  udpDataTypes.h
devel/include/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  Altitude.h  AttitudeTarget.h  BatteryStatus.h  CamIMUStamp.h  CommandBool.h  CommandBoolRequest.h  CommandBoolResponse.h  CommandCode.h  CommandHome.h  CommandHomeRequest.h  CommandHomeResponse.h  CommandInt.h  CommandIntRequest.h  CommandIntResponse.h  CommandLong.h  CommandLongRequest.h  CommandLongResponse.h  CommandTOL.h  CommandTOLRequest.h  CommandTOLResponse.h  CommandTriggerControl.h  CommandTriggerControlRequest.h  CommandTriggerControlResponse.h  CommandTriggerInterval.h  CommandTriggerIntervalRequest.h  CommandTriggerIntervalResponse.h  CommandVtolTransition.h  CommandVtolTransitionRequest.h  CommandVtolTransitionResponse.h  Commands.h  CompanionProcessStatus.h  DebugValue.h  EstimatorStatus.h  ExtendedState.h  FileChecksum.h  FileChecksumRequest.h  FileChecksumResponse.h  FileClose.h  (+118 more)
devel/include/navigator/: position_setpoint_triplet.h
devel/include/processer/: uavflag.h
devel/include/test/: stringMsg.h
devel/lib/basic/: DisplayInfoFMU  GetHomePosition  GetWaypointList  OneClickLanding  SendNewWaypoints  mode_setting  takeoff_mission
devel/lib/communication/: UDP_Receive  UDP_Send  UDP_Send_QGCommand  UDP_Send_fromtxt  UDP_Send_fromtxt_localip  UDP_Send_justhome  mavlink_uart  mavlink_uart_truedata  sendDataForFormation  sendFormationShape  setqgcommands  test_udp_receive  test_udp_send
devel/lib/fw_att_control/: FixedwingAttitudeControl
devel/lib/fw_pos_control/: FixedwingPositionControl
devel/lib/mavros/: gcs_bridge  mavros_node
devel/lib/mavros_extras/: servo_state_publisher  visualization
devel/lib/msgsSub/: msgSubAndPub
devel/lib/navigator/: GPS2ENU  navigator
logs/basic/: build.make.001.log.stderr
logs/communication/: build.make.000.log.stderr  build.make.011.log.stderr
logs/fw_att_control/: build.make.000.log.stderr  build.make.007.log.stderr
logs/fw_msgs/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/fw_pos_control/: build.make.001.log.stderr  build.make.012.log.stderr  build.make.014.log.stderr  build.make.025.log.stderr
logs/navigator/: build.make.000.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr
src/: README.md
src/bagfiles/: output.yaml  output_1.yaml  session1_2020-08-16-17-19-41.bag
src/fw_msgs/: CMakeLists.txt  package.xml
src/launch/: singleRc.launch
src/leader_date/: local_x.txt  local_y.txt  local_z.txt  yaw_date.txt
src/lib/: Macro.hpp
src/modules/fw_pos_control/: CMakeLists.txt  FixedwingPositionControl.cpp  FixedwingPositionControl.hpp  package.xml
src/modules/fw_pos_control/include/FixedwingPositionSubAndPub/: FixedwingPositionSubAndPub.cpp  FixedwingPositionSubAndPub.hpp
src/modules/fw_pos_control/include/formation/: PositionControl_FORMATION.cpp  PositionControl_FORMATION.hpp
src/modules/fw_pos_control/include/formation/formationControl/: formationControl.cpp  formationControl.hpp
src/modules/fw_pos_control/include/single/: PositionControl_L1_TECS.cpp  PositionControl_L1_TECS.hpp  PositionControl_VF.cpp  PositionControl_VF.hpp
src/modules/fw_pos_control/include/single/TangentVF/: Tangent.cpp  Tangent.h
src/modules/fw_pos_control/include/single/positionControl/: L1_TECS.cpp  L1_TECS.hpp
src/modules/fw_pos_control/include/single/positionControl/L1/: lateralController.cpp  lateralController.hpp
src/modules/fw_pos_control/include/single/positionControl/TECS/: tecs.cpp  tecs.hpp
src/modules/fw_pos_control/include/single/speed/: speed.h
src/modules/fw_pos_control/include/single/speed/speed_sp/: speed_sp.cpp  speed_sp.hpp
src/modules/fw_pos_control/include/single/threeDimensionVF/: threeDimensionVF.cpp  threeDimensionVF.h
src/modules/fw_pos_control/include/single/vf/: VF.cpp  VF.hpp
src/scripts/: _0_run_single.sh  _0_singleTest.sh  _0_waypoint_test.sh  _10_single_test.sh  _10_triple_run.sh  _10_triple_sitl.sh  _10_triple_takeoff.sh  _10_triple_vehicles_sitl.sh  _1_BasicNode.sh  _2_startL1TECS.sh  _3_startSingle.sh  _4_startFormation.sh  _8_clean.sh  _8_formation.sh  _8_multi_takeoff.sh  _8_multi_vehicles_sitl.sh  _8_run_formation.sh  _8_test_single_p900.sh  _9_Joint.sh  _9_first_connection_qgc.sh  _9_run_SelfOrganize.sh  _9_run_all_system.sh  _9_second_connection_qgc.sh  _9_test_algorithm.sh  killAll.sh  task.txt
src/test/: CMakeLists.txt
(+1325 files in other folders)
